<resources>
    <string name="app_name">FarmaTica</string>
    <string name="et_Email">Email</string>
    <string name="et_Password">Password</string>
    <string name="et_NombreUsuario">Nombre del Usuario</string>
    <string name="et_Direccion">Dirección</string>
    <string name="et_Telefono">Teléfono</string>
    <string name="et_NumeroTarjeta">Número de la Tarjeta</string>
    <string name="et_MiPerfil">Mi Perfil</string>
    <string name="bt_iniciarSesion">Iniciar Sesion</string>
    <string name="bt_registrarse">Registrarse</string>
    <string name="bt_RegistrarCuenta">Registrar Cuenta</string>
    <string name="bt_PerfilUsuario">Perfil de Usuario</string>
    <string name="bt_Medicamentos">Medicamentos</string>
    <string name="bt_CarritoCompras">Carrito de Compras</string>
    <string name="bt_Contactos">Contactos</string>
    <string name="bt_ActualizarPerfil">Actualizar perfil</string>
    <string name="bt_SoporteTecnico">Soporte Técnico</string>
    <string name="bt_ServicioCliente">Servicio al Cliente</string>
    <string name="bt_FAQ">FAQ</string>
    <string name="bt_Redes">Redes Sociales</string>
    <string name="et_Contactenos">Contáctenos</string>
    <string name="et_InfoContactenos">Acá podrás encontrar información de contacto con el área de soporte de nuestra aplicación, así como con nuestros farmacéuticos. También tendrás acceso a links y respuestas a las preguntas más comunes.</string>
    <string name="et_nuestrasRedes">Nuestras Redes</string>
    <string name="et_InfoRedes">Acá encontrarás los enlaces a nuestras redes sociales, dónde podrás estas al tanto de novedades y promociones</string>
    <string name="et_Instagram">Instagram</string>
    <string name="et_Facebook">Facebook</string>
    <string name="et_LinkedIn">Linked In</string>
    <string name="et_Youtube">Youtube</string>
    <string name="et_Twitter">Twitter</string>
    <string name="et_faq">FAQ</string>
    <string name="et_InfoFaq">En este apartado podrás explorar las preguntas más comunes y sus respuestas de manera sencilla y rápida.</string>
    <string name="et_preguntaUno">Pregunta #1</string>
    <string name="et_ResolucionpreguntaUno">Resolución</string>
    <string name="et_preguntaDos">Pregunta #2</string>
    <string name="et_preguntaTres">Pregunta #3</string>
    <string name="et_servicioCliente">Servicio al Cliente</string>
    <string name="et_InfoServicio">Acá podrás contactar a nuestros representantes si tienes alguna duda sobre tus pagos, medicamentos, horarios de atención, sucursales, entre otros.</string>
    <string name="et_InfoWhatsapp">Whatsapp: 500-675-936</string>
    <string name="et_InfoCentralSac">Central de SAC: 2525-8588</string>
    <string name="et_soporteTecnico">Soporte Técnico</string>
    <string name="et_InfoCentralSoporte">Central: 2525-9595</string>
    <string name="et_InfoSoporte">Acá podrás encontrar información de contacto con el área de Soporte Técnico por si tienes algún problema con la aplicación.</string>
    <string name="et_historialPagos">Historial de Pagos</string>
    <string name="et_fechaPago1">15-Abril-22</string>
    <string name="et_fechaPago2">15-Marzo-22</string>
    <string name="et_fechaPago3">15-Febrero-22</string>
    <string name="et_fechaPago4">15-Enero-22</string>
    <string name="et_precioPago">$15</string>
    <string name="bt_CuidadoPersonal">CUIDADO PERSONAL</string>
    <string name="bt_Dermatologia">DERMATOLOGIA</string>
    <string name="bt_AnticonseptivosYHormonal">ANTICONCEPTIVOS Y HORMONAL</string>
    <string name="bt_Endocrinologia">ENDOCRINOLOGIA</string>

    <string name="default_web_client_id_r" translatable="false">450970217762-fnlip8t65jmhtch59e1s2j47duqel52j.apps.googleusercontent.com</string>

</resources>