<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Principal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="99dp"
        android:layout_height="104dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/contactenos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/bt_Redes"
        android:onClick="abrirRedesSociales"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button10"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/bt_FAQ"
        android:onClick="abrirFAQ"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/bt_ServicioCliente"
        android:onClick="abrirServicioAlCliente"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/bt_SoporteTecnico"
        android:onClick="abrirSoporteTecnico"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="36dp"
        android:text="@string/et_Contactenos"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="351dp"
        android:layout_height="131dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:text="@string/et_InfoContactenos"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>