<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Principal">

    <Button
        android:id="@+id/button11"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/contacto"
        android:text="@string/bt_Contactos"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button10"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/historial"
        android:text="@string/bt_HistorialCompras"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/medicamentos"
        android:text="@string/bt_Medicamentos"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/perfilicono"
        android:text="@string/bt_PerfilUsuario"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="112dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_farmatica" />
</androidx.constraintlayout.widget.ConstraintLayout>